--- a/index.html
+++ b/index.html
@@ -61,25 +61,25 @@
 <section id="about-me">
     <h2>About Me</h2>
     <p>
-        Mit navn er Jazmin Martinez og jeg kommer oprindelig fra Mexico. Jeg har været i Denmark siden 2007
-        og er mor til 3 piger på henholdhvis 19,17 og 12 år. i min fritid elsker jeg at styrke træne og brug tid på min
-        piger og kæreste.
-        Som selvstændig erhvervsdrivende er jeg vant til at tage ansvar og arbejde
-        passioneret i min hverdag.
+        Mit navn er Jazmin Martinez, og jeg kommer oprindeligt fra Mexico.
+        Jeg har boet i Danmark siden 2007 og er mor til tre piger på henholdsvis 19, 17 og 12 år.
+        I min fritid elsker jeg at styrketræne og bruge tid sammen med mine døtre og min kæreste.
     </p>
-    <p>I mit erhverv som negletekniker har jeg en naturlig
-        sans for detaljer og jeg kan bidrage med god service og vejledning af kunder.</p>
+    <p>Som selvstændig erhvervsdrivende er jeg vant til at tage ansvar og arbejde passioneret i min hverdag.
+        I mit arbejde som negletekniker har jeg udviklet en naturlig sans for detaljer
+        og et fokus på at levere god service og professionel vejledning til kunderne.</p>
 
-    <p> Jeg lægger en stor ære i at kunne hjælpe og give kunden en god oplevelse, så
-        de har lyst til at komme tilbage næste gang de skal forkæle sig selv, eller en de
-        holder af.</p>
+    <p> Jeg lægger stor vægt på at skabe en positiv oplevelse for kunden,
+        så de føler sig godt behandlet og har lyst til at komme tilbage –
+        enten for at forkæle sig selv eller en, de holder af..</p>
 
-    <p>Jeg er god til at skabe en behagelig relation til de mennesker jeg omgås med, og dette ser jeg som en af
-        de vigtigste egenskaber, når man arbejder med kunder. Jeg er god til at
-        kommunikere, er lærenem og har et stort gåpåmod.</p>
+    <p>Jeg er god til at opbygge behagelige relationer til de mennesker,
+        jeg arbejder sammen med, og ser dette som en af de vigtigste egenskaber i kundekontakt.
+        Derudover er jeg kommunikativ stærk, lærenem og går til opgaver med stort gåpåmod..</p>
 
-    <p>Jeg har i 2008 gennemført de første par semestre i Datamatiker-uddannelsen.
-        Derfor min interesse nu i at læse IT-arkitektur.
+    <p>I 2008 gennemførte jeg de første semestre på Datamatiker-uddannelsen,
+        hvilket har skabt min fortsatte interesse for IT.
+        Netop derfor ønsker jeg nu at læse videre inden for IT-arkitektur.
     </p>
 </section>
 
@@ -122,7 +122,7 @@
                     ÅLBORG.</h3>
                 - Test Software
                 - Booker møder
-                - Interegere med kunder
+                - Interagere med kunder
             </li>
         </ol>
     </nav2>
